add the grades section and the news section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link text-black-50 fw-bold text-center" href="#contact-us">اتصل بنا</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-black-50 fw-bold ms-lg-3 text-center" href="who-are-we.html">من نحن</a>
+                <a class="nav-link text-black-50 fw-bold ms-lg-3 text-center" href="about-us.html">من نحن</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-black-50 fw-bold ms-lg-3 text-center" href="#our-events">الندوات</a>
@@ -52,7 +52,7 @@
                 <a class="nav-link text-black-50 fw-bold ms-lg-3 text-center" href="#services">خدماتنا</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-black-50 fw-bold ms-lg-3 text-center" href="#news">أخبار</a>
+                <a class="nav-link text-black-50 fw-bold ms-lg-3 text-center" href="news.html">أخبار</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bold ms-lg-3 active text-center" href="#landing">الرئيسية</a>
@@ -196,9 +196,9 @@
           <div class="sec-header mb-3 fw-bold text-end pe-2">خدماتنا</div>
           <div class="row">
             <div class="col-12 col-md-6 col-lg-3">
-              <div class="card mb-xlg-0 mb-3 mx-auto rounded-4 p-4 border-0 main-shadow">
+              <div class="card mb-xlg-0 mb-3 mx-auto rounded-4 p-3 border-0 main-shadow">
                 <img src="assets/images/svgexport-6 (4).svg" class="card-img-top ms-auto p-3 rounded" alt="card img">
-                <div class="card-body text-end">
+                <div class="card-body text-end p-1">
                   <h5 class="card-title fw-bold">تطبيقات الموبايل</h5>
                   <p class="card-text text-black-50">
                     نظراً لأهمية تطبيقات الموبايل وكثرة عدد مستخدميها بشكل لا غني عنه الآن نهتم بالعمل عليها دائماً بكافة التقنيات والأنظمة بمختلف أنواعها
@@ -207,9 +207,9 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
-              <div class="card mb-xlg-0 mb-3 mx-auto rounded-4 p-4 border-0 main-shadow">
+              <div class="card mb-xlg-0 mb-3 mx-auto rounded-4 p-3 border-0 main-shadow">
                 <img src="assets/images/svgexport-6 (5).svg" class="card-img-top ms-auto p-3 rounded" alt="card img">
-                <div class="card-body text-end">
+                <div class="card-body text-end p-1">
                   <h5 class="card-title fw-bold">تطبيقات الموبايل</h5>
                   <p class="card-text text-black-50">
                     نظراً لأهمية تطبيقات الموبايل وكثرة عدد مستخدميها بشكل لا غني عنه الآن نهتم بالعمل عليها دائماً بكافة التقنيات والأنظمة بمختلف أنواعها
@@ -218,9 +218,9 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
-              <div class="card rounded-4 p-4 mb-3 mx-auto border-0 main-shadow">
+              <div class="card rounded-4 p-3 mb-3 mx-auto border-0 main-shadow">
                 <img src="assets/images/svgexport-10.svg" class="card-img-top ms-auto p-3 rounded" alt="card img">
-                <div class="card-body text-end">
+                <div class="card-body text-end p-1">
                   <h5 class="card-title fw-bold">تطبيقات الموبايل</h5>
                   <p class="card-text text-black-50">
                     نظراً لأهمية تطبيقات الموبايل وكثرة عدد مستخدميها بشكل لا غني عنه الآن نهتم بالعمل عليها دائماً بكافة التقنيات والأنظمة بمختلف أنواعها
@@ -229,9 +229,9 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
-              <div class="card rounded-4 p-4 mx-auto border-0 main-shadow">
+              <div class="card rounded-4 p-3 mx-auto border-0 main-shadow">
                 <img src="assets/images/svgexport-10 (1).svg" class="card-img-top ms-auto p-3 rounded" alt="card img">
-                <div class="card-body text-end">
+                <div class="card-body text-end p-1">
                   <h5 class="card-title fw-bold">تطبيقات الموبايل</h5>
                   <p class="card-text text-black-50">
                     نظراً لأهمية تطبيقات الموبايل وكثرة عدد مستخدميها بشكل لا غني عنه الآن نهتم بالعمل عليها دائماً بكافة التقنيات والأنظمة بمختلف أنواعها
@@ -245,7 +245,9 @@
 
       <div class="py-4 grades">
         <div class="container">
-          <img src="assets/images/Group 9130.png" alt="your grade" class="img-fluid">
+          <a href="grade.html">
+            <img src="assets/images/Group 9130.png" alt="grade image" class="img-fluid">
+          </a>
         </div>
       </div>
 
@@ -383,9 +385,24 @@
                         من فضلك قم بإدخال البيانات المطلوبة منك وسوف يتم إرسال تفاصيل الندوة لك وموعدها علي بريدك الإلكتروني ورقم تذكرة الحضور الخاصة بك
                       </p>
                       <form class="text-end mb-3" action="">
+                        <div class="position-relative">
                         <input class="form-control bg-light mb-3" type="text" placeholder= "الأسم بالكامل" required>
+                          <div class="position-absolute clear">
+                            <i class="fa-solid fa-x"></i>
+                          </div>
+                        </div>
+                        <div class="position-relative">
                         <input class="form-control bg-light mb-3" type="number" placeholder= "رقم الهاتف" required>
-                        <input class="form-control bg-light mb-3" type="email" placeholder= "بريد إلكترونب" required>
+                        <div class="position-absolute clear">
+                          <i class="fa-solid fa-x"></i>
+                        </div>
+                        </div>
+                        <div class="position-relative">
+                        <input class="form-control bg-light mb-4" type="email" placeholder= "بريد إلكترونب" required>
+                        <div class="position-absolute clear">
+                          <i class="fa-solid fa-x"></i>
+                        </div>
+                        </div>
                         <input type="submit" class="btn border-0 fw-bold d-flex ms-auto main-btn sub-data" value="تسجيل الأن">
                       </form>
                     </div>
@@ -519,6 +536,9 @@
               عقار رقم 9 شارع رقم9 – مدينة
               <i class="fa-solid fa-location-dot ms-3"></i>
             </div>
+          </div>
+          <div class="rights d-flex justify-content-center pb-2 pt-4 text-white-50" style="font-size: 10px;">
+            <span>SMART GATE 2021 ©</span>جميع الحقوق محفوظة لدي
           </div>
         </div>
       </footer>
