edit the contact us section and adding functionality to the sing in and register buttons

--- a/about-us.html
+++ b/about-us.html
@@ -73,8 +73,12 @@
                       من فضلك قم بإدخال البيانات المطلوبة منك لإستكمال تسجيل الدخول ومعرفة الدرجات والتقديرات الخاصة بك في الجامعة
                     </p>
                     <form class="text-end mb-3" action="">
-                      <input class="form-control bg-light mb-3" type="number" placeholder= "الرقم القومي" required>
-                      <input class="form-control bg-light mb-3" type="number" placeholder= "الرقم الجامعي" required>
+                      <div class="position-relative">
+                        <input class="form-control bg-light mb-3" type="number" placeholder= "الرقم القومي" required>
+                      </div>
+                      <div class="position-relative">
+                        <input class="form-control bg-light mb-3" type="number" placeholder= "الرقم الجامعي" required>
+                      </div>
                       <input type="submit" class="btn border-0 fw-bold d-flex ms-auto main-btn" value="تسجيل الآن">
                     </form>
                   </div>
@@ -105,7 +109,9 @@
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                       </select>
-                      <input class="form-control bg-light mb-3" type="number" placeholder= "رقم الجلوس" required>
+                      <div class="position-relative">
+                        <input class="form-control bg-light mb-3" type="number" placeholder= "رقم الجلوس" required>
+                      </div>
                       <input type="submit" class="btn border-0 fw-bold d-flex ms-auto main-btn" value="المتابعة">
                     </form>
                   </div>
