edting the footter linkes and rights

--- a/index.html
+++ b/index.html
@@ -533,15 +533,17 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-5 text-end">
-              <div>الرئيسية</div>
-              <a href="#services" class="d-block text-decoration-none">خدماتنا</a>
+              <a href="index.html#landing" class="d-block text-decoration-none">الرئيسية</a>
+              <a href="index.html" class="d-block text-decoration-none">خدماتنا</a>
               <a href="who-are-we.html" class="d-block text-decoration-none">قطاعتنا</a>
-              <a href="#our-events" class="d-block text-decoration-none">الندوات</a>
-              <a href="#who-are-we" class="d-block text-decoration-none">من نحن</a>
+              <a href="index.html#our-events" class="d-block text-decoration-none">الندوات</a>
+              <a href="about-us.html" class="d-block text-decoration-none">من نحن</a>
             </div>
             <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-3 text-end">
               <div class="mb-3">
-                <img src="assets/images/footerImg.png" alt="logo" class="img-fluid">
+                  <a href="index.html">
+                    <img src="assets/images/footerImg.png" alt="logo" class="img-fluid">
+                  </a>
               </div>
               عقار رقم 9 شارع رقم9 – مدينة
               <i class="fa-solid fa-location-dot ms-3"></i>
@@ -549,6 +551,9 @@
           </div>
           <div class="rights d-flex justify-content-center pb-2 pt-4 text-white-50" style="font-size: 10px;">
             <span>SMART GATE 2021 ©</span>جميع الحقوق محفوظة لدي
+          </div>
+          <div class="my-acc d-flex justify-content-center pb-2 pt-4 text-white-50" style="font-size: 10px;">
+            <span>made by <a href="https://www.linkedin.com/in/samuel-nady-hafazalla-339349230" class="text-decoration-none fw-bold" target="_blank">Samuel Nady</a></span>
           </div>
         </div>
       </footer>
