--- a/news.html
+++ b/news.html
@@ -54,7 +54,7 @@
                 <a class="nav-link text-black-50 fw-bold ms-lg-3 text-center active" href="news.html">أخبار</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold ms-lg-3 text-center" href="#landing">الرئيسية</a>
+                <a class="nav-link fw-bold ms-lg-3 text-center" href="index.html#landing">الرئيسية</a>
               </li>
             </ul>
           </div>
@@ -186,60 +186,65 @@
     </div>
 
     <footer class="pt-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-5 text-end">
-              <div class="social mb-3">
-                <div class="mb-3">تابعنا عبر</div>
-                <i class="fa-brands fa-facebook-f ms-3"></i>
-                <i class="fa-brands fa-instagram ms-3"></i>
-                <i class="fa-brands fa-youtube ms-3"></i>
-              </div>
-              <div class="mb-3 d-flex rounded-3 subscirbe">
-                <button class="btn border-0 fw-bold d-flex ms-auto main-btn reg-btn">
-                  التسجيل الآن
-                </button>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="بريدك الإلكتروني">
-              </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-5 text-end">
+            <div class="social mb-3">
+              <div class="mb-3">تابعنا عبر</div>
+              <i class="fa-brands fa-facebook-f ms-3"></i>
+              <i class="fa-brands fa-instagram ms-3"></i>
+              <i class="fa-brands fa-youtube ms-3"></i>
+            </div>
+            <div class="mb-3 d-flex rounded-3 subscirbe">
+              <button class="btn border-0 fw-bold d-flex ms-auto main-btn reg-btn">
+                التسجيل الآن
+              </button>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="بريدك الإلكتروني">
+            </div>
 
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-5 text-end">
-              <div class="contact">
-                <div class="mb-3">تواصل معنا عبر</div>
-                <div class="mb-3">
-                  0123456789
-                  <i class="ms-3 fa-solid fa-phone"></i>
-                </div>
-                <div class="mb-3">
-                  023456789
-                  <i class="ms-3 fa-solid fa-mobile-screen"></i>
-                </div>
-                <div class="mb-3">
-                  example@example.com
-                  <i class="ms-3 fa-solid fa-envelope"></i>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-5 text-end">
-              <div>الرئيسية</div>
-              <a href="#services" class="d-block text-decoration-none">خدماتنا</a>
-              <a href="who-are-we.html" class="d-block text-decoration-none">قطاعتنا</a>
-              <a href="#our-events" class="d-block text-decoration-none">الندوات</a>
-              <a href="#who-are-we" class="d-block text-decoration-none">من نحن</a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-3 text-end">
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-5 text-end">
+            <div class="contact">
+              <div class="mb-3">تواصل معنا عبر</div>
               <div class="mb-3">
-                <img src="assets/images/footerImg.png" alt="logo" class="img-fluid">
+                0123456789
+                <i class="ms-3 fa-solid fa-phone"></i>
               </div>
-              عقار رقم 9 شارع رقم9 – مدينة
-              <i class="fa-solid fa-location-dot ms-3"></i>
+              <div class="mb-3">
+                023456789
+                <i class="ms-3 fa-solid fa-mobile-screen"></i>
+              </div>
+              <div class="mb-3">
+                example@example.com
+                <i class="ms-3 fa-solid fa-envelope"></i>
+              </div>
             </div>
           </div>
-          <div class="rights d-flex justify-content-center pb-2 pt-4 text-white-50" style="font-size: 10px;">
-            <span>SMART GATE 2021 ©</span>جميع الحقوق محفوظة لدي
+          <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-5 text-end">
+            <a href="index.html#landing" class="d-block text-decoration-none">الرئيسية</a>
+            <a href="index.html" class="d-block text-decoration-none">خدماتنا</a>
+            <a href="who-are-we.html" class="d-block text-decoration-none">قطاعتنا</a>
+            <a href="index.html#our-events" class="d-block text-decoration-none">الندوات</a>
+            <a href="about-us.html" class="d-block text-decoration-none">من نحن</a>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 mb-lg-0 mb-3 text-end">
+            <div class="mb-3">
+                <a href="index.html">
+                  <img src="assets/images/footerImg.png" alt="logo" class="img-fluid">
+                </a>
+            </div>
+            عقار رقم 9 شارع رقم9 – مدينة
+            <i class="fa-solid fa-location-dot ms-3"></i>
           </div>
         </div>
-      </footer>
+        <div class="rights d-flex justify-content-center pb-2 pt-4 text-white-50" style="font-size: 10px;">
+          <span>SMART GATE 2021 ©</span>جميع الحقوق محفوظة لدي
+        </div>
+        <div class="my-acc d-flex justify-content-center pb-2 pt-4 text-white-50" style="font-size: 10px;">
+          <span>made by <a href="https://www.linkedin.com/in/samuel-nady-hafazalla-339349230" class="text-decoration-none fw-bold" target="_blank">Samuel Nady</a></span>
+        </div>
+      </div>
+    </footer>
     <script src="assets/vendors/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendors/js/all.min.js"></script>
     <script src="assets/js/main.js"></script>
